--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,163 +1,179 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="16dp"
-    android:paddingBottom="1dp"
+    android:background="@drawable/home_background"
     tools:context=".LoginActivity">
 
-    <!-- Scroll View so that all screns can adapt via scrolling -->
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
 
-            <!-- Login Image -->
-            <ImageView
-                android:id="@+id/login_head_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleX="1"
-                android:scaleY="1"
-                android:src="@drawable/login"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/welcome"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Welcome Back !"
-                android:textColor="#3E2750"
-                android:textSize="10sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/login_head_image" />
-
-            <TextView
-                android:id="@+id/Logintext"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Login With : "
-                android:textColor="#016E9C"
-                android:textSize="30sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/welcome" />
-
-            <TextView
-                android:id="@+id/emailLabel"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="Email"
-                android:textColor="#021191"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/Logintext" />
-
-            <!--Editable Text to edit for email -->
-            <EditText
-                android:id="@+id/email"
+            <LinearLayout
+                android:id="@+id/top_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:hint="Email"
-                android:textSize="16dp"
+                android:background="@drawable/home_background"
+                android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/emailLabel" />
+                app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:id="@+id/passwordLabel"
+                <!-- LinearLayout for contents of top bar -->
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <!-- LinearLayout for logo, company and tag line of top bar -->
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <!-- ImageView for logo of top bar -->
+                        <ImageView
+                            android:id="@+id/top_logo"
+                            android:layout_width="0dp"
+                            android:layout_height="100dp"
+                            android:layout_marginVertical="10dp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/logo_white_nobg_cropped" />
+
+                        <!-- TextView for logo of top bar -->
+                        <TextView
+                            android:id="@+id/top_company_name_text_view"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginVertical="10dp"
+                            android:layout_weight="1"
+                            android:text="OFY Clinics"
+                            android:textAlignment="center"
+                            android:textColor="#ffffff"
+                            android:textSize="35sp"
+                            android:textStyle="bold" />
+
+                    </LinearLayout>
+
+                    <!-- TextView for tagline of top bar -->
+                    <TextView
+                        android:id="@+id/topic1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="Meet a better you"
+                        android:textAlignment="center"
+                        android:textColor="#ffffff"
+                        android:textSize="20sp" />
+
+                </LinearLayout>
+
+                <!-- ImageView for additional girl image of top bar -->
+                <ImageView
+                    android:id="@+id/heading_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="150dp"
+                    android:layout_margin="5dp"
+                    android:layout_weight="2"
+                    android:background="@drawable/headimage" />
+
+            </LinearLayout>
+
+            <View
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="Password"
-                android:textColor="#021191"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/email" />
+                android:layout_height="1dp"
+                android:layout_margin="20dp"
+                android:background="@color/black" />
 
-            <!--Editable Text to edit for password -->
-            <EditText
-                android:id="@+id/password"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:hint="Password"
-                android:imeActionLabel="Action_sign_in_short"
-                android:imeOptions="actionDone"
-                android:inputType="textPassword"
-                android:selectAllOnFocus="true"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/passwordLabel" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="20dp"
+                android:orientation="vertical">
 
-            <!--Login button-->
-            <Button
-                android:id="@+id/button"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:layout_marginHorizontal="80dp"
-                android:layout_marginVertical="30dp"
-                android:backgroundTint="#1EC826"
-                android:text="Log In"
-                android:textSize="25sp"
-                app:cornerRadius="35dp"
-                app:layout_constraintBottom_toTopOf="@id/registerbutton"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/password"
-                app:layout_constraintWidth_percent="0.75" />
+                <!--Editable Text to edit for email -->
+                <EditText
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:background="@color/white"
+                    android:hint="Email"
+                    android:padding="10dp"
+                    android:textSize="15sp" />
 
-            <!--Register button-->
-            <Button
-                android:id="@+id/registerbutton"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginHorizontal="80dp"
-                android:layout_marginTop="16dp"
-                android:backgroundTint="#1B7C9A"
-                android:text="Register"
-                android:textSize="25sp"
-                app:cornerRadius="35dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/button"
-                app:layout_constraintWidth_percent="0.75" />
 
-            <!-- Google Sign-In Button -->
-            <com.google.android.gms.common.SignInButton
-                android:id="@+id/google_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/registerbutton" />
+                <!--Editable Text to edit for password -->
+                <EditText
+                    android:id="@+id/password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:background="@color/white"
+                    android:hint="Password"
+                    android:imeActionLabel="Action_sign_in_short"
+                    android:imeOptions="actionDone"
+                    android:inputType="textPassword"
+                    android:padding="10dp"
+                    android:selectAllOnFocus="true"
+                    android:textSize="15sp" />
+                <!--Login button-->
+                <Button
+                    android:id="@+id/button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginTop="20dp"
+                    android:backgroundTint="#1EC826"
+                    android:text="Log In"
+                    android:textSize="15sp"
+                    app:cornerRadius="35dp" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <!--Register button-->
+                <Button
+                    android:id="@+id/registerbutton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="20dp"
+                    android:backgroundTint="#1B7C9A"
+                    android:text="Register"
+                    android:textSize="15sp"
+                    app:cornerRadius="35dp" />
+
+                <TextView
+                    android:id="@+id/alternate_login_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="20dp"
+                    android:text="Or"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="15sp" />
+
+                <!-- Google Sign-In Button -->
+                <com.google.android.gms.common.SignInButton
+                    android:id="@+id/google_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
 
     </ScrollView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
