--- a/app/src/main/res/layout/fragment_view_meal.xml
+++ b/app/src/main/res/layout/fragment_view_meal.xml
@@ -36,8 +36,7 @@
                 android:text="DD/MM/YYYY"
                 android:textAlignment="center"
                 android:textColor="#350069"
-                android:textSize="15sp"
-                android:textStyle="bold" />
+                android:textSize="15sp" />
 
         </LinearLayout>
         <!-- LinearLayout for selecting and viewing a particular meal -->
@@ -76,7 +75,7 @@
                 app:cardCornerRadius="20dp">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_margin="10dp"
@@ -85,10 +84,9 @@
                     <!-- LinearLayout for meal name, image, and type to view a particular meal -->
                     <LinearLayout
                         android:id="@+id/view_meal_image_data_linear_layout"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_margin="10dp">
+                        android:layout_gravity="center">
 
                         <ImageView
                             android:id="@+id/view_meal_meal_image_field"
@@ -96,13 +94,12 @@
                             android:layout_height="80dp"
                             android:layout_margin="10dp"
                             android:layout_gravity="center"
-                            android:background="#000000"
                             android:src="@drawable/logo_white_nobg_cropped"
                             app:cardCornerRadius="20dp" />
 
                         <LinearLayout
                             android:id="@+id/view_meal_data_linear_layout"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:orientation="vertical">
@@ -195,7 +192,6 @@
                                 android:id="@+id/view_meal_protein_field"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:layout_marginEnd="10dp"
                                 android:layout_weight="1"
                                 android:hint="60g"
                                 android:inputType="number|numberDecimal"
@@ -260,7 +256,6 @@
                                 android:id="@+id/view_meal_carbohydrates_field"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:layout_marginEnd="10dp"
                                 android:layout_weight="1"
                                 android:hint="60g"
                                 android:inputType="number|numberDecimal"
@@ -271,7 +266,9 @@
                         </LinearLayout>
 
                     </LinearLayout>
+
                 </LinearLayout>
+
             </androidx.cardview.widget.CardView>
 
             <LinearLayout
