--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -94,7 +94,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_margin="20dp"
-                android:background="@color/black" />
+                android:background="@color/white" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -133,12 +133,12 @@
                     android:id="@+id/button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginHorizontal="10dp"
                     android:layout_marginTop="20dp"
                     android:backgroundTint="#1EC826"
                     android:text="Log In"
                     android:textSize="15sp"
-                    app:cornerRadius="35dp" />
+                    app:cornerRadius="5dp" />
 
                 <!--Register button-->
                 <Button
@@ -146,11 +146,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="20dp"
+                    android:layout_margin="10dp"
                     android:backgroundTint="#1B7C9A"
                     android:text="Register"
                     android:textSize="15sp"
-                    app:cornerRadius="35dp" />
+                    app:cornerRadius="5dp" />
 
                 <TextView
                     android:id="@+id/alternate_login_text"
