--- a/app/src/main/res/layout/activity_update_diet_target.xml
+++ b/app/src/main/res/layout/activity_update_diet_target.xml
@@ -18,12 +18,12 @@
             android:id="@+id/target_update_target_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="25dp"
+            android:layout_margin="20dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
             android:text="Update diet target : "
-            android:textColor="#2A2AA5"
-            android:textSize="30sp"
+            android:textColor="@color/black"
+            android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -52,7 +52,7 @@
                     android:padding="20dp"
                     android:text="Energy"
                     android:textColor="#49569E"
-                    android:textSize="20sp"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
 
                 <!-- EditText to update energy target -->
@@ -64,7 +64,7 @@
                     android:hint="650Cal"
                     android:inputType="number|numberDecimal"
                     android:textColor="#006666"
-                    android:textSize="25sp"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -95,7 +95,7 @@
                     android:padding="20dp"
                     android:text="Protein"
                     android:textColor="#49569E"
-                    android:textSize="20sp"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
 
                 <!-- EditText to update protein target -->
@@ -107,7 +107,7 @@
                     android:hint="60g"
                     android:inputType="number|numberDecimal"
                     android:textColor="#006666"
-                    android:textSize="25sp"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -138,7 +138,7 @@
                     android:padding="20dp"
                     android:text="Fats      "
                     android:textColor="#49569E"
-                    android:textSize="20sp"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
 
                 <!-- EditText to update fats target -->
@@ -150,7 +150,7 @@
                     android:hint="60g"
                     android:inputType="number|numberDecimal"
                     android:textColor="#006666"
-                    android:textSize="25sp"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -180,7 +180,7 @@
                     android:padding="20dp"
                     android:text="Carbohydrates"
                     android:textColor="#49569E"
-                    android:textSize="20sp"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
 
                 <!-- EditText to update carbohydrates target -->
@@ -192,27 +192,40 @@
                     android:hint="60g"
                     android:inputType="number|numberDecimal"
                     android:textColor="#006666"
-                    android:textSize="25sp"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
 
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
 
-        <!-- Button to submit updated target -->
-        <Button
+        <!-- Card View for button to submit updated diet target -->
+        <androidx.cardview.widget.CardView
             android:id="@+id/target_update_target_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="24dp"
-            android:layout_marginTop="24dp"
-            android:text="Update target"
-            android:textSize="24sp"
-            android:textStyle="bold"
+            android:layout_marginVertical="80dp"
+            android:backgroundTint="#350069"
+            app:cardCornerRadius="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/target_carbohydrates_card" />
+            app:layout_constraintTop_toBottomOf="@+id/target_carbohydrates_card">
+
+            <!-- TextView for text to submit updated diet target  -->
+            <TextView
+                android:id="@+id/target_update_target_button_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="20dp"
+                android:text="Update Target"
+                android:textColor="#FFFFFF"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+        </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </ScrollView>
